Set PluginQuirkRequiresDefaultScreenDepth for all Flash versions and not just Flash 10.

Reviewed by Kenneth Rohde Christiansen.

https://bugs.webkit.org/show_bug.cgi?id=44043

* plugins/PluginPackage.cpp:
(WebCore::PluginPackage::determineQuirks):



Canonical link: https://commits.webkit.org/56324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65524 268f45cc-cd09-0410-ab3c-d52691b4dbfc